# Hackaton-NASA-2025

./: README.md  package-lock.json  package.json  requirements.txt
backend/: agent_csv.py  agent_geral.py  agent_literatura.py  agent_missoes.py  pyproject.toml  requirements.txt  servidor_api.py
backend/app/: config.py  main.py
backend/routes/: neo4j.py  rotes.py
backend/services/: neo4j_service.py
src/: tailwind.config.js
src/app/: globals.css
src/app/(home)/: layout.tsx  page.tsx
src/app/dashBoard/: layout.tsx  page.tsx
src/app/dashboardNext/: layout.tsx  page.tsx
src/components/LPSComponents/: footer.tsx  header.tsx  serviceCard.tsx  tabs.tsx
src/components/dashBoardComponents/: iaChat.tsx  searchBar.tsx
